--- a/index.html
+++ b/index.html
@@ -14,12 +14,72 @@
         <!--Ajout d'une ligne-->
         <div class="row">
             <!--Ajout de cellules sur la ligne-->
+            <div class="cell one"></div>
+            <div class="cell bomb"></div>
+            <div class="cell one"></div>
+            <div class="cell"></div>
+            <div class="cell one"></div>
+            <div class="cell bomb"></div>
+            <div class="cell one"></div>
+            <div class="cell"></div>
+        </div>
+        <div class="row">
+            <div class="cell two"></div>
+            <div class="cell two"></div>
+            <div class="cell two"></div>
+            <div class="cell"></div>
+            <div class="cell one"></div>
+            <div class="cell one"></div>
+            <div class="cell one"></div>
+            <div class="cell"></div>
+        </div>
+        <div class="row">
+            <div class="cell one"></div>
+            <div class="cell bomb"></div>
+            <div class="cell one"></div>
             <div class="cell"></div>
             <div class="cell"></div>
             <div class="cell"></div>
             <div class="cell"></div>
             <div class="cell"></div>
+        </div>
+        <div class="row">
+            <div class="cell two"></div>
+            <div class="cell two"></div>
+            <div class="cell one"></div>
             <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+        </div>
+        <div class="row">
+            <div class="cell bomb"></div>
+            <div class="cell one"></div>
+            <div class="cell"></div>
+            <div class="cell one"></div>
+            <div class="cell one"></div>
+            <div class="cell two"></div>
+            <div class="cell one"></div>
+            <div class="cell one"></div>
+        </div>
+        <div class="row">
+            <div class="cell two"></div>
+            <div class="cell three"></div>
+            <div class="cell three"></div>
+            <div class="cell three"></div>
+            <div class="cell bomb"></div>
+            <div class="cell two"></div>
+            <div class="cell bomb"></div>
+            <div class="cell"></div>
+        </div>
+        <div class="row">
+            <div class="cell"></div>
+            <div class="cell bomb"></div>
+            <div class="cell bomb"></div>
+            <div class="cell bomb"></div>
+            <div class="cell"></div>
+            <div class="cell three"></div>
             <div class="cell"></div>
             <div class="cell"></div>
         </div>
@@ -29,67 +89,7 @@
             <div class="cell"></div>
             <div class="cell"></div>
             <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-        </div>
-        <div class="row">
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-        </div>
-        <div class="row">
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-        </div>
-        <div class="row">
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-        </div>
-        <div class="row">
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-        </div>
-        <div class="row">
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-        </div>
-        <div class="row">
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
+            <div class="cell bomb"></div>
             <div class="cell"></div>
             <div class="cell"></div>
         </div>
