--- a/index.html
+++ b/index.html
@@ -15,27 +15,43 @@
         <div class="row">
             <!--Ajout de cellules sur la ligne-->
             <div class="cell one"></div>
-            <div class="cell bomb"></div>
+            <div class="cell bomb">
+                <img src="bomb.gif" alt="bomb">
+            </div>
             <div class="cell one"></div>
             <div class="cell"></div>
             <div class="cell one"></div>
-            <div class="cell bomb"></div>
+            <div class="cell bomb">
+                <img src="bomb.gif" alt="bomb">
+            </div>
             <div class="cell one"></div>
+            <div class="cell"></div>
+        </div>
+        <div class="row">
+            <div class="cell two"></div>
+            <div class="cell two"></div>
+            <div class="cell two"></div>
+            <div class="cell"></div>
+            <div class="cell one"></div>
+            <div class="cell one"></div>
+            <div class="cell one"></div>
+            <div class="cell"></div>
+        </div>
+        <div class="row">
+            <div class="cell one"></div>
+            <div class="cell bomb">
+                <img src="bomb.gif" alt="bomb">
+            </div>
+            <div class="cell one"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
             <div class="cell"></div>
         </div>
         <div class="row">
             <div class="cell two"></div>
             <div class="cell two"></div>
-            <div class="cell two"></div>
-            <div class="cell"></div>
-            <div class="cell one"></div>
-            <div class="cell one"></div>
-            <div class="cell one"></div>
-            <div class="cell"></div>
-        </div>
-        <div class="row">
-            <div class="cell one"></div>
-            <div class="cell bomb"></div>
             <div class="cell one"></div>
             <div class="cell"></div>
             <div class="cell"></div>
@@ -44,17 +60,9 @@
             <div class="cell"></div>
         </div>
         <div class="row">
-            <div class="cell two"></div>
-            <div class="cell two"></div>
-            <div class="cell one"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-        </div>
-        <div class="row">
-            <div class="cell bomb"></div>
+            <div class="cell bomb">
+                <img src="bomb.gif" alt="bomb">
+            </div>
             <div class="cell one"></div>
             <div class="cell"></div>
             <div class="cell one"></div>
@@ -68,16 +76,26 @@
             <div class="cell three"></div>
             <div class="cell three"></div>
             <div class="cell three"></div>
-            <div class="cell bomb"></div>
+            <div class="cell bomb">
+                <img src="bomb.gif" alt="bomb">
+            </div>
             <div class="cell two"></div>
-            <div class="cell bomb"></div>
+            <div class="cell bomb">
+                <img src="bomb.gif" alt="bomb">
+            </div>
             <div class="cell"></div>
         </div>
         <div class="row">
             <div class="cell"></div>
-            <div class="cell bomb"></div>
-            <div class="cell bomb"></div>
-            <div class="cell bomb"></div>
+            <div class="cell bomb">
+                <img src="bomb.gif" alt="bomb">
+            </div>
+            <div class="cell bomb">
+                <img src="bomb.gif" alt="bomb">
+            </div>
+            <div class="cell bomb">
+                <img src="bomb.gif" alt="bomb">
+            </div>
             <div class="cell"></div>
             <div class="cell three"></div>
             <div class="cell"></div>
@@ -89,7 +107,9 @@
             <div class="cell"></div>
             <div class="cell"></div>
             <div class="cell"></div>
-            <div class="cell bomb"></div>
+            <div class="cell bomb">
+                <img src="bomb.gif" alt="bomb">
+            </div>
             <div class="cell"></div>
             <div class="cell"></div>
         </div>
