--- a/index.html
+++ b/index.html
@@ -14,45 +14,35 @@
         <!--Ajout d'une ligne-->
         <div class="row">
             <!--Ajout de cellules sur la ligne-->
-            <div class="cell one"></div>
+            <div class="cell one">1</div>
             <div class="cell bomb">
                 <img src="bomb.gif" alt="bomb">
             </div>
-            <div class="cell one"></div>
+            <div class="cell one">1</div>
             <div class="cell"></div>
-            <div class="cell one"></div>
+            <div class="cell one">1</div>
             <div class="cell bomb">
                 <img src="bomb.gif" alt="bomb">
             </div>
-            <div class="cell one"></div>
+            <div class="cell one">1</div>
             <div class="cell"></div>
         </div>
         <div class="row">
-            <div class="cell two"></div>
-            <div class="cell two"></div>
-            <div class="cell two"></div>
+            <div class="cell two">2</div>
+            <div class="cell two">2</div>
+            <div class="cell two">2</div>
             <div class="cell"></div>
-            <div class="cell one"></div>
-            <div class="cell one"></div>
-            <div class="cell one"></div>
+            <div class="cell one">1</div>
+            <div class="cell one">1</div>
+            <div class="cell one">1</div>
             <div class="cell"></div>
         </div>
         <div class="row">
-            <div class="cell one"></div>
+            <div class="cell one">1</div>
             <div class="cell bomb">
                 <img src="bomb.gif" alt="bomb">
             </div>
-            <div class="cell one"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-        </div>
-        <div class="row">
-            <div class="cell two"></div>
-            <div class="cell two"></div>
-            <div class="cell one"></div>
+            <div class="cell one">1</div>
             <div class="cell"></div>
             <div class="cell"></div>
             <div class="cell"></div>
@@ -60,32 +50,42 @@
             <div class="cell"></div>
         </div>
         <div class="row">
-            <div class="cell bomb">
-                <img src="bomb.gif" alt="bomb">
-            </div>
-            <div class="cell one"></div>
+            <div class="cell two">2</div>
+            <div class="cell two">2</div>
+            <div class="cell one">1</div>
             <div class="cell"></div>
-            <div class="cell one"></div>
-            <div class="cell one"></div>
-            <div class="cell two"></div>
-            <div class="cell one"></div>
-            <div class="cell one"></div>
-        </div>
-        <div class="row">
-            <div class="cell two"></div>
-            <div class="cell three"></div>
-            <div class="cell three"></div>
-            <div class="cell three"></div>
-            <div class="cell bomb">
-                <img src="bomb.gif" alt="bomb">
-            </div>
-            <div class="cell two"></div>
-            <div class="cell bomb">
-                <img src="bomb.gif" alt="bomb">
-            </div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
             <div class="cell"></div>
         </div>
         <div class="row">
+            <div class="cell bomb">
+                <img src="bomb.gif" alt="bomb">
+            </div>
+            <div class="cell one">1</div>
+            <div class="cell"></div>
+            <div class="cell one">1</div>
+            <div class="cell one">1</div>
+            <div class="cell two">2</div>
+            <div class="cell one">1</div>
+            <div class="cell one">1</div>
+        </div>
+        <div class="row">
+            <div class="cell two">2</div>
+            <div class="cell three">3</div>
+            <div class="cell three">3</div>
+            <div class="cell three">3</div>
+            <div class="cell bomb">
+                <img src="bomb.gif" alt="bomb">
+            </div>
+            <div class="cell two">2</div>
+            <div class="cell bomb">
+                <img src="bomb.gif" alt="bomb">
+            </div>
+            <div class="cell"></div>
+        </div>
+        <div class="row">
             <div class="cell"></div>
             <div class="cell bomb">
                 <img src="bomb.gif" alt="bomb">
@@ -97,7 +97,7 @@
                 <img src="bomb.gif" alt="bomb">
             </div>
             <div class="cell"></div>
-            <div class="cell three"></div>
+            <div class="cell three">3</div>
             <div class="cell"></div>
             <div class="cell"></div>
         </div>
