--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
             <div class="cell bomb">
                 <img src="bomb.gif" alt="bomb">
             </div>
-            <div class="cell"></div>
+            <div class="cell full" alt="full"></div>
         </div>
         <div class="row">
-            <div class="cell"></div>
+            <div class="cell full" alt="full"></div>
             <div class="cell bomb">
                 <img src="bomb.gif" alt="bomb">
             </div>
@@ -96,22 +96,22 @@
             <div class="cell bomb">
                 <img src="bomb.gif" alt="bomb">
             </div>
-            <div class="cell"></div>
+            <div class="cell full" alt="full"></div>
             <div class="cell three">3</div>
-            <div class="cell"></div>
-            <div class="cell"></div>
+            <div class="cell full" alt="full"></div>
+            <div class="cell full" alt="full"></div>
         </div>
         <div class="row">
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
+            <div class="cell full" alt="full"></div>
+            <div class="cell full" alt="full"></div>
+            <div class="cell full" alt="full"></div>
+            <div class="cell full" alt="full"></div>
+            <div class="cell full" alt="full" class="shadow"></div>
             <div class="cell bomb">
                 <img src="bomb.gif" alt="bomb">
             </div>
-            <div class="cell"></div>
-            <div class="cell"></div>
+            <div class="cell full" alt="full"></div>
+            <div class="cell full" alt="full"></div>
         </div>
 </body>
 
